<?xml version="1.0"?>
<package format="2">
  <name>voxblox_ground_truth</name>
  <version>1.0.0</version>
  <description>
    The voxblox_ground_truth package
    Edited by Mason
  </description>

  <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>
  <maintainer email="eungchang_mason@kaist.ac.kr">Eungchang Mason Lee</maintainer>

  <author>Victor Reijgwart</author>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>voxblox</depend>
  <depend>voxblox_ros</depend>
  <depend>voxblox_msgs</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>

</package>
