<?xml version="1.0"?>
<package format="2">
  <name>tsdf_to_pcdnormal</name>
  <version>0.0.0</version>
  <description>The tsdf_to_pcdnormal ROS package</description>
  <maintainer email="eungchang_mason@kaist.ac.kr">Eungchang Mason Lee</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>voxblox</build_depend>
  <build_depend>voxblox_msgs</build_depend>
  <build_depend>voxblox_ros</build_depend>
  <build_depend>minkindr_conversions</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>voxblox</exec_depend>
  <exec_depend>voxblox_msgs</exec_depend>
  <exec_depend>voxblox_ros</exec_depend>
  <exec_depend>minkindr_conversions</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
